--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
 <meta name="author" content"Evan Kalvis">
@@ -33,5 +34,6 @@
    <div class="text-center"><a href=" https://github.com/evan17gr" class="creator" target="_blank">
      &drbkarow; Evan Kalvis</a></div>
 </div>
-</body>
+
+  </body>
 </html>
